<resources>
    <string name="app_name">JLP_Layouts</string>
    <string name="app_title">DITS</string>
    <string name="title">Delivery Item Tracking System</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="question_mark">\?</string>
    <string name="forget_password">Forget password</string>
    <string name="forget_password_with_question_mark">Forget password?</string>
    <string name="change_password">Change password</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_new_password">Enter confirm new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="email_id">Email Id</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="or">OR</string>
    <string name="resend">Resend</string>
    <string name="next">Next</string>
    <string name="congratulations">Congratulations!</string>
    <string name="password_changed_successfully">Your password has been changed successfully! \n\n Please login again to return to main menu</string>
    <string name="login_failure">Login Failure - Logon details are incorrect, Please retry</string>
    <string name="password_must_be">Password must be\n &#160;&#160;-6-8 Character long \n &#160;&#160;-Only alphanumeric characters allowed\n &#160;&#160;-At least one alphabetic and one numeric character\n &#160;&#160;-Not same as old password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_enter_user_id_and_password">Please enter User ID and Password</string>
    <string name="please_enter_user_id">Please enter user Id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_should_be">Password should be 6-8 characters long</string>
    <string name="number_lots_mustbe_different">Number of lots must be different to current lots</string>
    <string name="invalid_authentication_details">Invalid authentication details</string>
    <string name="no_valid_branches_setup">No valid branches setup</string>
    <string name="credentials_not_accepted">Credentials not accepted</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="new_password_and_confirm_password_mismatch">New password fields do not match</string>
    <string name="new_password_and_old_password_should_not_be_same">New password and old password should not be same</string>
    <string name="wrong_password_format">Invalid password. The Password should follow these rules \n- 6-8 characters long. \n- only alphanumeric characters allowed. \n- at least one alphabetic and one numeric character. \n- Not same as old password.</string>
    <string name="at_least_one_alpha_one_num_req">At least one alphabetic and one numeric character required</string>
    <string name="alert_error_message">Some Warning data not found..!</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="you_need_to_login_again">You need to log on again</string>
    <string name="session_expired">Session has expired</string>
    <string name="hello_blank_fragment">Hello Blank Fragment!</string>
    <string name="str_item_enquiry">Item Enquiry</string>
    <string name="str_item_movements">Item Movements</string>
    <string name="str_movements">Multi Movements</string>
    <string name="str_reprint_labels">Reprint Labels</string>
    <string name="str_amend_lots">Amend Lots</string>
    <string name="str_route_management">Route Management</string>
    <string name="str_track_handover_delivery">Carrier Collection Details</string>
    <string name="str_handover_delivery">Carrier Handover Details</string>
    <string name="str_selected_printer">Selected Printer</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_dummy_username">ganesh123</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="backstack_tag">home</string>
    <string name="str_debug_error">Set Click event!</string>
    <string name="dummy_item">Item</string>
    <string name="item_enquiry_title">Item enquiry</string>
    <string name="location_barcode_not_recognised">Location barcode not recognised.Please scan again</string>
    <string name="enter_lots_required">Enter  Number of Lots Required</string>
    <string name="enter_item_barcode_number">Enter item barcode number/scan</string>
    <string name="Next">Next</string>
    <string name="print">Print</string>
    <string name="text_display_item_enquiry_key">Display Key</string>
    <string name="text_display_item_enquiry_value">Display Value</string>
    <string name="text_route_number">Route Number</string>
    <string name="text_route_number1">Route Number1</string>
    <string name="scan_location_barcode_to_move_item">Scan location barcode to move item</string>
    <string name="scan_next_item_barcode">Scan next item barcode</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="item_barcode_required">Item barcode required</string>
    <string name="location_barcode_required">Location barcode required</string>
    <string name="enter_delivery_number_scan">Input Delivery Number/Barcode</string>
    <string name="invalid_barcode">Invalid Barcode</string>
    <string name="invalid_deliveryno_barcode">Invalid Delivery Number/Barcode</string>
    <string name="enter_route_number_scan">Input Route Number/Barcode</string>
    <string name="invalid_route_id">Invalid route id.</string>
    <string name="invalid_input">Number of lots must be greater than zero.</string>
    <string name="dummy_header_here">Header Here!</string>
    <string name="str_route_number">Route Number</string>
    <string name="str_delivery_date">Delivery Date</string>
    <string name="str_total_deliveries">Total Deliveries</string>
    <string name="str_total_lots">Total Lots</string>
    <string name="str_current_lot">Current Lot</string>
    <string name="dummy_route_number">R380AM20091001T01</string>
    <string name="dummy_delivery_date">23/05/2009</string>
    <string name="dummy_total_deliveries">15</string>
    <string name="dummy_total_lots">10</string>
    <string name="dummy_total_lots_loaded">16</string>
    <string name="dummy_delivery_number">12345678</string>
    <string name="dummy_customer_name">Jon Joe</string>
    <string name="str_customer_name">Customer Name :</string>
    <string name="str_delivery_no">Delivery No :</string>
    <string name="dummy_item_num">81711111</string>
    <string name="str_product_description">Product Description</string>
    <string name="dummy_product_desc">XXXXXXX XXXXXXX X \nXXXXXX \nXXXXX XXXXXX XXX X XXX XX</string>
    <string name="ok">OK</string>
    <string name="lot_number_required">Please Enter Lot Number</string>
    <string name="enter_lot_number">Enter Lot Number</string>
    <string name="stored_in_location">Stored in location</string>
    <string name="lot_number">Lot number</string>
    <string name="product_description">Product description</string>
    <string name="item">Item</string>
    <string name="route_number">Route number</string>
    <string name="delivery_date">Delivery date</string>
    <string name="last_recorded_location">Last recorded location</string>
    <string name="time_of_last_move">Time of last move</string>
    <string name="last_user_id">Last user id</string>
    <string name="address">Address</string>
    <string name="product_code">Product code</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_dummy_enter_input">Enter input Text:</string>
    <string name="dummy_dialog_title">Dialog</string>
    <string name="please_enter_details_for_handover">Please enter details for handover</string>
    <string name="to_be_collected_and_delivered_by">To be collected and delivered by</string>
    <string name="to_be_delivered_by">To be delivered by</string>
    <string name="on">On</string>
    <string name="delivery_to_the_customer_on">Delivery to the customer on</string>
    <string name="latest_delivery_time">Latest delivery time</string>
    <string name="latest_earliest_time">Earliest delivery time</string>
    <string name="onward_tracking_reference">Onward tracking reference</string>
    <string name="confirm">Confirm</string>
    <string name="handover_delivery_title">Carrier Handover Details</string>
    <string name="this_delivery_includes_services">This Delivery includes services</string>
    <string name="delivery_already_has_handover_details_captured">Delivery already has Handover details setup</string>
    <string name="package_item_not_recognised">Delivery cancelled or package item not recognised</string>
    <string name="item_movement_title">Item Movement</string>
    <string name="delivery_number">Delivery number</string>
    <string name="str_ok">Ok</string>
    <string name="str_clear_filter">Clear filter</string>
    <string name="enter_location_barcode_number">Enter location barcode number</string>
    <string name="enter_location_barcode_number_or_scan">Enter location barcode number/scan</string>
    <string name="multi_movement_title">Multi Movements</string>
    <string name="selected_location">Selected location</string>
    <string name="str_route_summary">Route Summary</string>
    <string name="dummy_lotSr">L</string>
    <string name="dummy_location_b5">Location B5</string>
    <string name="pls_attach_label">Please attach labels and store items using Movements option</string>
    <string name="update_has_failed">Update has failed</string>
    <string name="reduce_no_of_lots">Please reduce the number of lots required.</string>
    <string name="description">Description</string>
    <string name="printerId">printerId</string>
    <string name="printerName">PrinterName</string>
    <string name="enter_delivery_number">Enter delivery number</string>
    <string name="printer">Printer</string>
    <string name="deliveryId">Delivery ID</string>
    <string name="deliveryGoodId">Good ID</string>
    <string name="productCode">Product code</string>
    <string name="orderDescriptionClean">Order description</string>
    <string name="label_printed_on_printer">Labels Printed on Printer</string>
    <string name="carrier_collection_details">Enter delivery number/scan</string>
    <string name="enter_delivery_barcode_number">Enter delivery barcode number/scan</string>
    <string name="enter_delivery_barcode_number_or_scan">Enter delivery barcode number/scan</string>
    <string name="enter_route_number_or_scan">Enter Route number/scan</string>
    <string name="enter_route_number">Enter Route number</string>
    <string name="please_scan_all_parts_lot_for">Please scan all parts lot for</string>
    <string name="delivery_item_details">Delivery item details</string>
    <string name="delivery">Delivery</string>
    <string name="done">Done</string>
    <string name="scanned_item_no">Scanned item No.</string>
</resources>