<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/laySummaryContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/color_light_gray"
    android:padding="@dimen/margin_padding_small">

    <include layout="@layout/layout_guideline_std" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwoParts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRouteLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRouteRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight" />

    <TextView
        android:id="@+id/txtRouteNumberTitle"
        style="@style/text_views_cardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_route_number"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwoParts"
        app:layout_constraintStart_toStartOf="@+id/guidelineRouteLeft"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtRouteNumberValue"
        style="@style/text_views_cardValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_route_number"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRouteRight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwoParts"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        style="@style/style_views_divider_black"

        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtRouteNumberTitle" />


    <TextView
        android:id="@+id/txtDeliveryDateTitle"
        style="@style/text_views_cardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_delivery_date"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwoParts"
        app:layout_constraintStart_toStartOf="@+id/guidelineRouteLeft"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />


    <TextView
        android:id="@+id/txtDeliveryDateValue"
        style="@style/text_views_cardValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_delivery_date"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRouteRight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwoParts"
        app:layout_constraintTop_toTopOf="@+id/txtDeliveryDateTitle" />

    <View
        android:id="@+id/divider2"
        style="@style/style_views_divider_black"

        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtDeliveryDateTitle" />


    <TextView
        android:id="@+id/txtTotalDeliveriesTitle"
        style="@style/text_views_cardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_total_deliveries"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwoParts"
        app:layout_constraintStart_toStartOf="@+id/guidelineRouteLeft"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />


    <TextView
        android:id="@+id/txTotalDeliveriesValue"
        style="@style/text_views_cardValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_total_deliveries"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRouteRight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwoParts"
        app:layout_constraintTop_toTopOf="@+id/txtTotalDeliveriesTitle" />

    <View
        android:id="@+id/divider3"
        style="@style/style_views_divider_black"

        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalDeliveriesTitle" />


    <TextView
        android:id="@+id/txtTotalLotsTitle"
        style="@style/text_views_cardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_total_lots"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwoParts"
        app:layout_constraintStart_toStartOf="@+id/guidelineRouteLeft"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />


    <TextView
        android:id="@+id/txTotalLotsValue"
        style="@style/text_views_cardValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_total_lots"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRouteRight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwoParts"
        app:layout_constraintTop_toTopOf="@+id/txtTotalLotsTitle" />

    <View
        android:id="@+id/divider4"
        style="@style/style_views_divider_black"

        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalLotsTitle" />


    <TextView
        android:id="@+id/txtTotalLotsLoadedTitle"
        style="@style/text_views_cardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Total Lots Loaded"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwoParts"
        app:layout_constraintStart_toStartOf="@+id/guidelineRouteLeft"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />


    <TextView
        android:id="@+id/txTotalLotsLoadedValue"
        style="@style/text_views_cardValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_total_lots_loaded"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRouteRight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwoParts"
        app:layout_constraintTop_toTopOf="@+id/txtTotalLotsLoadedTitle" />

    <View
        android:id="@+id/divider5"
        style="@style/style_views_divider_black"

        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalLotsLoadedTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>
